tests/golden/error/duplicate_import_alias/main.expected
warning: Phase A.5 global collection failed with 1 error; cross-module imports may not resolve.
  first error: error[E0007]: the name `Foo` is imported from both `mod_a` and `mod_b` (at 197..200)
  note: first imported from `mod_a` (at 181..184)
  help: use `as` to rename one import: `use mod_b::Foo as foo_alias;`
  hint: run `tungsten doctor check phase-a5 <file>` for details
[E0007] Error: the name `Foo` is imported from both `mod_a` and `mod_b`
   ╭─[tests/golden/error/duplicate_import_alias/main.tg:8:12]
   │
 7 │ use mod_a::Foo;
   │            ─┬─  
   │             ╰─── first imported from `mod_a`
 8 │ use mod_b::Foo;
   │            ─┬─  
   │             ╰─── 
   │ 
   │ Help: use `as` to rename one import: `use mod_b::Foo as foo_alias;`
───╯

error: aborting due to 1 error
